# groq-subtitles

./: README.md  pyproject.toml  subtitle_progress.json
subtitles/: __init__.py  cli.py  config.py  processor.py  pyproject.toml  transcriber.py
tests/: test_config.py  test_processor.py  test_transcriber.py
